traces/bug_51.txt
/home/runner/work/42sh-infer/42sh-infer/src/prompt/mechanics/char.c:43: error: DEAD_STORE
  The value written to &c (type int) is never used.
Showing all 1 steps of the trace


/home/runner/work/42sh-infer/42sh-infer/src/prompt/mechanics/char.c:43:5: Write of unused value
41.   {
42.       int i;
43.       int c = -1;
          ^
44.       char *new;
45.   
